# foampilot

./: .gitignore  README.fr.md  README.md  README.zh.md  classy_block_example.py  run_exemple1.py  run_exemple1_update.py  run_exemple2.py  test.py  test_full_stl.py  test_gmsh.py
foampilot/: .gitignore  Dockerfile  LICENSE  mkdocs.yaml  pyproject.toml  readme.md  requirements.txt  test.sh  test_boundary_class.py  test_constant_class.py  test_install.sh  test_system_class.py
foampilot/docs/: about.md  detailled_example_2.md  install_openfoam.md
foampilot/docs/en/: about.md  fluids_theory.md  index.md  install_openfoam.md  presentation.md  user_documentation.md
foampilot/docs/en/dev/: dev_detailed_documentation.md  dev_intro_documentation.md  manage_quantity.md
foampilot/docs/en/example/: presentation_example.md
foampilot/docs/en/example/muffler/: detailled_example_muffler.md
foampilot/docs/en/example/simplecar/: detailled_example.md
foampilot/docs/fr/: about.md  description.md  description_detailed.md  dev_intro_documentation.md  fluids_theory.md  index.md  install_openfoam.md  manage_quantity.md  presentation.md  user_documentation.md  user_documentation.py
foampilot/docs/fr/dev/: dev_index.md  dev_intro_documentation.md  manage_quantity.md
foampilot/docs/fr/example/: presentation_example.md
foampilot/docs/fr/example/muffler/: detailled_example_muffler.md
foampilot/docs/fr/example/simplecar/: detailled_example.md
foampilot/docs/zh/: about.md  fluids_theory.md  index.md  install_openfoam.md  presentation.md  user_documentation.md
foampilot/docs/zh/dev/: dev_detailed_documentation.md  dev_index.md  dev_intro_documentation.md  manage_quantity.md
foampilot/docs/zh/example/: presentation_example.md  presntation_example.md
foampilot/docs/zh/example/muffler/: detailled_example_muffler.md
foampilot/docs/zh/example/simplecar/: detailled_example.md
foampilot/site/: 404.html  index.html  sitemap.xml
foampilot/site/about/: index.html
foampilot/site/dev/dev_detailed_documentation/: index.html
foampilot/site/dev/dev_index/: index.html
foampilot/site/dev/dev_intro_documentation/: index.html
foampilot/site/dev/manage_quantity/: index.html
foampilot/site/example/muffler/detailled_example_muffler/: index.html
foampilot/site/example/presentation_example/: index.html
foampilot/site/example/simplecar/detailled_example/: index.html
foampilot/site/fluids_theory/: index.html
foampilot/site/fr/: index.html
foampilot/site/fr/about/: index.html
foampilot/site/fr/dev/dev_detailed_documentation/: index.html
foampilot/site/fr/dev/dev_index/: index.html
foampilot/site/fr/dev/dev_intro_documentation/: index.html
foampilot/site/fr/dev/manage_quantity/: index.html
foampilot/site/fr/example/presentation_example/: index.html
foampilot/site/fr/fluids_theory/: index.html
foampilot/site/fr/install_openfoam/: index.html
foampilot/site/fr/presentation/: index.html
foampilot/site/fr/user_documentation/: index.html
foampilot/site/install_openfoam/: index.html
foampilot/site/presentation/: index.html
foampilot/site/search/: search_index.json
foampilot/site/user_documentation/: index.html
foampilot/site/zh/: index.html
foampilot/site/zh/about/: index.html
foampilot/site/zh/dev/dev_detailed_documentation/: index.html
foampilot/site/zh/dev/dev_index/: index.html
foampilot/site/zh/dev/dev_intro_documentation/: index.html
foampilot/site/zh/dev/manage_quantity/: index.html
foampilot/site/zh/fluids_theory/: index.html
foampilot/site/zh/install_openfoam/: index.html
foampilot/site/zh/presentation/: index.html
foampilot/site/zh/user_documentation/: index.html
foampilot/src/foampilot/: .gitignore  __init__.py
foampilot/src/foampilot/base/: __init__.py  cases_variables.py  meshing.py  openFOAMFile.py
foampilot/src/foampilot/boundaries/: __init__.py  boundaries_conditions_config.py  boundaries_dict.py  boundary.py  old
foampilot/src/foampilot/commons/: __init__.py  read_polymesh.py  serialize_class.py  stl_analyser.py
foampilot/src/foampilot/constant/: __init__.py  constantDirectory.py  g_file.py  gravityFile.py  pRefFile.py  physicalProperties.py  physicalproperties.py  radiationProperties.py  transportPropertiesFile.py  transportPropertiesFile_old.py  transportnonnewtonien.py  turbulencePropertiesFile.py
foampilot/src/foampilot/mesh/: BlockMeshFile.py  __init__.py  gmsh_mesher.py  snappymesh.py  test_snappymesh.py
foampilot/src/foampilot/model_addon/: __init__.py  windkessel.md  windkessel.py
foampilot/src/foampilot/postprocess/: __init__.py  airfoil.py  gnn.py  nozzle.py  openfoam_pyvista.py  wind_analysis.py
foampilot/src/foampilot/report/: __init__.py  latex_pdf.py  test_3.py  typst_pdf.py
foampilot/src/foampilot/solver/: __init__.py  base_solver.py  fluid.py  incompressible_fluid.py  incompressible_vof.py  solid.py  solver.py  variable.py
foampilot/src/foampilot/system/: SystemDirectory.py  __init__.py  controlDictFile.py  decomposeParDictFile.py  fvSchemesFile.py  fvSolutionFile.py  fvsystemschemetest.py  solutiontest.py
foampilot/src/foampilot/utilities/: __init__.py  coupling_foam_csv.py  dictonnary.py  epw_weather_reader.py  fluids_theory.py  function.py  import_tbad.py  latex_pdf.py  make_human.py  manageunits.py  optim_nii_files.py  read_mesh.py  residuals.py  stl_analyzer  stl_cleanup.py  windkessel.py
foampilot/test/: .gitignore  test_boundary_class.py  test_constant_class.py  test_system_class.py
fr/: index.html
(+158 files in other folders)
