[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foampilot"
version = "0.1.0"
description = "foampilot: a Python platform to control OpenFOAM from meshing to post-processing and automated reporting."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Steven Daix", email = "your_email@example.com" }
]
keywords = ["openfoam", "cfd", "simulation", "mesh", "post-processing", "pyvista", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "pyvista",
  "plotly",
  "matplotlib",
  "pint",
  "gmsh",
  "pyfluids",
  "pylatex",
  "streamlit",
  "classy_blocks",
  "imageio",
  "seaborn",
  "ipykernel",
  "jupyter"
]

[project.optional-dependencies]
dev = []
docs = ["mkdocs", "mkdocs-material", "mkdocs-static-i18n", "mkdocstrings", "mkdocstrings-python"]

[tool.foampilot.system-requirements]
linux = ["libglu1-mesa", "libgl1-mesa-glx", "libxrender1", "libxext6"]

[project.urls]
Homepage = "https://github.com/your-github/foampilot"
Bug_Tracker = "https://github.com/your-github/foampilot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
