[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foampilot"
version = "0.1.0"
description = "foampilot: a Python platform to control OpenFOAM from meshing to post-processing and automated reporting."
readme = "README.md"
license = { text = "MIT" }

authors = [
  { name = "Steven Daix", email = "your_email@example.com" }
]

keywords = [
  "openfoam",
  "cfd",
  "simulation",
  "mesh",
  "post-processing",
  "pyvista",
  "streamlit",
  "latex",
  "automation"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

requires-python = ">=3.9"

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "plotly",
  "pyvista",
  "gmsh",
  "classy_blocks",
  "pint",
  "pyfluids",
  "imageio",
  "pylatex",
  "streamlit",
  "ipykernel",
  "jupyter",
  "pytest",
  "pyvirtualdisplay",
  "trame",
  "trame-vtk", 
  "trame-vuetify",
  "meshio",
  "build123d"
]

[project.optional-dependencies]
dev = []
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-static-i18n",
  "mkdocstrings",
  "mkdocstrings-python"
]

# --------------------------------------------------------------------
# Linux / WSL system requirements needed for Gmsh, PyVista, LaTeX, etc.
# --------------------------------------------------------------------
[tool.foampilot.system-requirements]
linux = [
  # --- OpenGL / Mesa (gmsh, pyvista, vtk) ---
  "libglu1-mesa",
  "libgl1-mesa-glx",
  "libxrender1",
  "libxext6",

  # --- LaTeX (pdflatex + extended packages) ---
  "texlive-latex-base",
  "texlive-fonts-recommended",
  "texlive-fonts-extra",
  "texlive-latex-extra"
]

[project.urls]
Homepage = "https://github.com/your-github/foampilot"
Bug_Tracker = "https://github.com/your-github/foampilot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88