[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foampilot"
version = "0.1.0"
description = "foampilot: a Python platform to control OpenFOAM from meshing to post-processing and automated reporting."
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
requires-python = ">=3.9"

authors = [
  { name = "Steven Daix", email = "votre.email@exemple.com" }
]

keywords = ["openfoam", "cfd", "simulation", "pyvista", "automation"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "plotly",
  "pyvista",
  "gmsh",
  "classy_blocks",
  "pint",
  "pyfluids",
  "imageio",
  "pylatex",
  "streamlit",
  "pyvirtualdisplay",
  "trame",
  "trame-vtk", 
  "trame-vuetify",
  "meshio",
  "build123d",
  "typst",
  "scikit-image",
  "nibabel",
  "trimesh", 
  "pyacvd",
  "kagglehub"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipykernel",
  "jupyter",
  "black",
  "ruff"
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-static-i18n",
  "mkdocstrings",
  "mkdocstrings-python"
]

[project.urls]
Homepage = "https://github.com/stevendaix/foampilot"
Bug_Tracker = "https://github.com/stevendaix/foampilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["foampilot*"]

[tool.black]
line-length = 88
target-version = ["py39"]
